...
        return 'Super administrador';
      case UserRole.administrador:
        return 'Administrador';
      case UserRole.docente:
        return 'Docente';
      case UserRole.padreTutor:
        return 'Padre/Tutor';
      case UserRole.estudiante:
        return 'Estudiante';
    }
  }
}

